Harden 4.5.0 behavior and release verification